[package]
name = "the-bullpen-game"
version = "0.0.1"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
bevy = { version = "^0.14.0", default-features = false, features = [
  "dynamic_linking",
  "bevy_state",
  "bevy_asset",
  "bevy_color",
  "bevy_pbr",
  "bevy_scene",
  "x11",
  "tonemapping_luts",

  # Core
  "bevy_core_pipeline",
  "multi_threaded",
  "bevy_winit",
  "bevy_audio",
  "bevy_sprite",
  "bevy_text",

  # Core formats
  "vorbis",
  "png",
] }
# glam = { version = "^0.27.0", features = ["glam-assert"] }
bevy_flycam = "^0.14.1"
blenvy = { git = "https://github.com/kaosat-dev/Blenvy/", branch = "blenvy", version = "^0.1.0-alpha.1" }
# blenvy = { path = "../012-blenvy/Blenvy/crates/blenvy" }
blenvy-extensions = { path = "./crates/blenvy_extensions" }
leafwing-input-manager = "^0.14.0"
log = "^0.4.22"
bevy-inspector-egui = "^0.25.1"
bevy_third_person_camera = "0.1.11"
# bevy-rapier-baseball-flight = { path = "../../008-bevy-rapier-baseball-flight/bevy-rapier-baseball-flight" }
bevy-rapier-baseball-flight = { path = "../016-bevy-rapier-baseball-flight/bevy-rapier-baseball-flight" } #"0.0.1-alpha.4"
bevy_rapier3d = "0.27.0"
bevy_dolly = { version = "0.0.4" }
bevy_egui = "0.30"

[dev-dependencies]
bevy-inspector-egui = "^0.25.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
