[package]
name = "the-bullpen-game"
version = "0.0.1"
edition = "2021"

[dependencies]
bevy = { version = "^0.14.0", default-features = true }
bevy_flycam = "^0.14.1"
blenvy = { git = "https://github.com/kaosat-dev/Blenvy/", branch = "blenvy", version = "^0.1.0-alpha.1" }
blenvy-extensions = { git = "https://github.com/slothman3878/blenvy-extensions/", branch = "main" }
leafwing-input-manager = "^0.14.0"
log = "^0.4.22"
bevy_third_person_camera = "0.1.11"
bevy-rapier-baseball-flight = { git = "https://github.com/slothman3878/bevy-rapier-baseball-flight/", branch = "main" }
bevy_rapier3d = "0.27.0"
bevy_egui = { version = "0.30", default-features = false, features = [
  "default_fonts",
  "render",
  "serde",
] }

[dev-dependencies]
bevy-inspector-egui = "^0.25.1"

# [profile.dev]
# opt-level = 1

# [profile.dev.package."*"]
# opt-level = 3
